--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Research Cambridge</a>.</p>
 <h2>Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>New address:</i>
-  <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a></p>
+  <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a> (<a href="https://www.inria.fr/en/centre/paris/overview/how-to-reach-us">How to reach us</a>)</p>
 <p><i>Equivalent Address (address above is so new that mapping applications might not know it):</i><br/>
   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
@@ -362,8 +362,8 @@ MPRI website</a>.</p>
     John Hughes,
     Zoe Paraskevopoulou,
     Li-yao Xia.
-    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
-    Draft of July 2015.
+    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Beginner's Luck: A Language for Random Generators.</a></b>
+    Draft of June 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
