--- a/students.html
+++ b/students.html
@@ -109,7 +109,7 @@ Property-Based Testing</a></li>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a> (<a href="https://thorstent.github.io/theses/master.pdf">thesis</a>)</li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="https://thorstent.github.io/theses/bachelor.pdf"> Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.troxo.com/">Troxo</a>/<a href="http://www.atomia.com/">Atomia</a>] [Now PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>] [Now research engineer at the <a href="http://www.ait.ac.at/">Austrian Institute of Technology (AIT)</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://people.mmci.uni-saarland.de/~mgrochul/">Martin Grochulla</a>
   <ul>
