--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust,
       POST 2017</a> (PC member)
   <ul>
-  <!-- <li>Submission deadline: , 2016</li> -->
+  <li>Submission deadline: 14 October 2016</li>
   <li>Conference: 23-29 April 2017, Uppsala, Sweden</li>
   </ul>
   </li>
