--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Research Cambridge</a>.</p>
     European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
     (General Chair)
   <ul>
-  <!-- <li>Submission deadline: August 2016</li> -->
+  <li>Submission deadline: 4 August 2016</li>
   <li>Conference: 26-28 April 2017, Paris, France</li>
   </ul>
   </li>
