--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Research Cambridge</a>.</p>
     (PC member)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2016</li> -->
-  <li>Submission deadline: 6 July 2016</li>
+  <!-- <li>Submission deadline: 6 July 2016</li> -->
   <li>Conference: 18-20 January 2017, Paris, France</li>
   </ul>
   </li>
