--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p style="width:42em; text-align: left">
 <!-- Starting in October 2013 -->
-Research Scientist (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_positions">chargé de recherche</a>)
+Researcher (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_positions">chargé de recherche</a>)
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
 in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
 
