--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
   (<a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
-   <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>,
+   <a href="https://arxiv.org/abs/1607.05443">draft paper #3</a>,
    <a href="https://github.com/QuickChick">code</a>)
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
@@ -304,7 +304,7 @@ MPRI website</a>.</p>
     John Hughes,
     Zoe Paraskevopoulou,
     Li-yao Xia.
-    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Beginner's Luck: A Language for Random Generators.</a></b>
+    <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
     Draft of June 2016.
   </li>
 
