--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ MPRI website</a>.</p>
     Zoe Paraskevopoulou,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
-    Draft of June 2016.
+    arXiv:1607.05443. Draft of June 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
