--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;">
     Leonidas Lampropoulos,
-    Benjamin C. Pierce,
+    Diane Gallois-Wong,
     C&#259;t&#259;lin Hri&#355;cu,
     John Hughes,
-    Zoe Paraskevopoulou,
+    Benjamin C. Pierce,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
     arXiv:1607.05443. Draft of June 2016.
