--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">ANR JCJC grant</a> on <i>QuickChick</i> project</li>
+
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
