--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
 
-  <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">ANR JCJC grant</a> on <i>QuickChick: Property-based Testing for Coq</i></li>
+  <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">ANR JCJC grant</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li>
 
