--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ to a Tagged Architecture</a>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a>, <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - January 2017
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - January 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at summer school <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a>, September 2016
