--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ to a Tagged Architecture</a>
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - January 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at summer school <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a>, September 2016
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at summer school on <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a>, September 2016
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
