--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@ Research Cambridge</a>.</p>
   <!-- </ul> -->
   </li>
 
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, Paris, December 2016 - February 2017
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at summer school on <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a>, Bucharest, September 2016
+  </li>
+
   <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
 
   <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, January 2016
