--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Research Cambridge</a>.</p>
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a><br/> summer school, Bucharest, September 2016
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, Paris, December 2016 - February 2017
