--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: February 12, 2016</li> -->
-  <!-- <li>Conference: 27 June - 1 July 2016, Lisbon, Portugal</li> -->
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: February 12, 2016</li> -\-> -->
+  <!-- <\!-- <li>Conference: 27 June - 1 July 2016, Lisbon, Portugal</li> -\-> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
     Theorem Proving, ITP 2016</a> (PC member)
@@ -108,21 +108,21 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: 28 April 2016</li> -->
-  <!-- <li>Conference: 1 July 2016, Coimbra, Portugal</li> -->
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member) -->
   <!-- <ul> -->
-  <!--   <li>Takes place January 18-19, 2016 in Saint Petersburg, Florida, USA<br/> -->
-  <!--       (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li> -->
-  <!-- <\!-- <li>Abstract submission: October 7, 2015</li> -\-> -->
-  <!-- <\!-- <li>Submission deadline: October 14, 2015</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 28 April 2016</li> -\-> -->
+  <!-- <\!-- <li>Conference: 1 July 2016, Coimbra, Portugal</li> -\-> -->
   <!-- </ul> -->
-  </li>
+  <!-- </li> -->
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!--   <li>Takes place January 18-19, 2016 in Saint Petersburg, Florida, USA<br/> -\-> -->
+  <!-- <\!--       (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li> -\-> -->
+  <!-- <\!-- <\\!-- <li>Abstract submission: October 7, 2015</li> -\\-> -\-> -->
+  <!-- <\!-- <\\!-- <li>Submission deadline: October 14, 2015</li> -\\-> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, Paris, December 2016 - February 2017
   </li>
