--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ Research School for Computer Science (IMPRS-CS)</a>
 and <a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft
 Research Cambridge</a>.</p>
 
+Quick Links:
+<a href="#contact">Contact</a>
+
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
@@ -176,7 +179,7 @@ Research Cambridge</a>.</p>
 </ul>
 
 
-<h2>Contact</h2>
+<h2 id="contact">Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>New address:</i>
   <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a> (<a href="https://www.inria.fr/en/centre/paris/overview/how-to-reach-us">How to reach us</a>)</p>
