--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@ Research School for Computer Science (IMPRS-CS)</a>
 and <a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft
 Research Cambridge</a>.</p>
 
-Quick Links:
+<p>
+<b>Quick Links:</b>
 <a href="#contact">Contact</a>
+</p>
 
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
