--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Research Cambridge</a>.</p>
 <p>
 <b>Quick Links:</b>
 <a href="#contact">Contact</a>
+<a href="#projects">Projects</a>
 </p>
 
 <h2>News/Events</h2>
@@ -194,7 +195,7 @@ Centre de Recherche Inria de Paris,<br/>
 2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12, France</p>
 
 
-<h2 id="students">Current Research Projects</h2>
+<h2 id="projects">Current Research Projects</h2>
 
 <!--
 <h2 id="students">Looking for Students and Young Researchers</h2>
