--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Research Cambridge</a>.</p>
 
 <p>
 <b>Quick Links:</b>
-<a href="#contact">Contact</a>
-<a href="#projects">Projects</a>
+<a href="#contact">Contact</a>;
+<a href="#projects">Projects</a>;
 </p>
 
 <h2>News/Events</h2>
