--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Research Cambridge</a>.</p>
 <b>Quick Links:</b>
 <a href="#contact">Contact</a>;
 <a href="#projects">Projects</a>;
+<a href="#interests">Interests</a>;
+<a href="#publications">Publications</a>;
 </p>
 
 <h2>News/Events</h2>
@@ -276,7 +278,7 @@ MPRI website</a>.</p>
 -->
 
 
-<h2>Research Interests</h2>
+<h2 id="interests">Research Interests</h2>
 <p style="width:42em; text-align: left">
   My research is primarily focused on <em>developing rigorous formal
     techniques for solving security problems</em>. I am
@@ -308,7 +310,7 @@ MPRI website</a>.</p>
       secure hardware</li>
   </ul>
 
-<h2>Recent Publications and Drafts</h2>
+<h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
 <p>For a complete list of my publications please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
