--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Research Cambridge</a>.</p>
 <a href="#projects">Projects</a>;
 <a href="#interests">Interests</a>;
 <a href="#publications">Publications</a>;
+<a href="#talks">Talks</a>;
+<a href="#teaching">Teaching</a>;
 </p>
 
 <h2>News/Events</h2>
@@ -496,7 +498,7 @@ MPRI website</a>.</p>
 </ul>
 
 
-<h2>Talks</h2>
+<h2 id="talks">Talks</h2>
 <p>Here are my recent and upcoming talks. For a complete list of my talks please look <a href="talks.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
@@ -579,7 +581,7 @@ to a Tagged Architecture</a>
 
 </ul>
 
-<h2>Teaching</h2>
+<h2 id="teaching">Teaching</h2>
 
 <p>Here are my recent courses. For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
