--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Research Cambridge</a>.</p>
 <a href="#publications">Publications</a>;
 <a href="#talks">Talks</a>;
 <a href="#teaching">Teaching</a>;
+<a href="#current-students">Students</a>;
+<a href="#tools">Tools</a>;
+<a href="#misc">Misc</a>
 </p>
 
 <h2>News/Events</h2>
@@ -632,7 +635,7 @@ to a Tagged Architecture</a>
   </li>
 </ul>
 
-<h2 id="old-students">Currently Advised Students</h2>
+<h2 id="current-students">Currently Advised Students</h2>
 
 <p>For a complete list of past students please look <a href="students.html">here</a>.</p>
 
