--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ Property-Based Testing</a></li>
        Antal Spector-Zabusky, and Andrew Tolmach)</li>
 </ul>
 
-<h2>Misc</h2>
+<h2 id="misc">Misc</h2>
 <ul>
   <li><a href="CatalinHritcuCV.pdf">My curriculum vitae</a>
 <!--, 
