--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Security and Cryptography Group</a> and
 held fellowships
 from the <a href="http://www.imprs-cs.de/">International Max Planck
 Research School for Computer Science (IMPRS-CS)</a>
-and <a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft
+and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-cambridge/">Microsoft
 Research Cambridge</a>.</p>
 
 <p>
