--- a/service.html
+++ b/service.html
@@ -34,6 +34,9 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+  <b>General Chair</b> of the 
+  <a href="http://www.ieee-security.org/TC/EuroSP2017/">
+       2nd IEEE European Symposium on Security and Privacy (EuroS\&P 2017)</a>
   </li>
 
 </ul>
