--- a/service.html
+++ b/service.html
@@ -25,6 +25,20 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+  <b>General Chair</b> of the 
+  <a href="http://www.ieee-security.org/TC/EuroSP2017/">
+       2nd IEEE European Symposium on Security and Privacy (EuroS\&P 2017)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  Main organizer of the \href{https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014}{Joint EasyCrypt-F$^\star$-CryptoVerif School 2014 in Paris}
+  (over 80 participants)
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  Organizer of the TOS reading group at UPenn
+  on the interplay between security, programming languages,
+  verification, operating systems, and hardware architecture (2012 -- 2013)
   </li>
 
 </ul>
@@ -34,9 +48,15 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-  <b>General Chair</b> of the 
-  <a href="http://www.ieee-security.org/TC/EuroSP2017/">
-       2nd IEEE European Symposium on Security and Privacy (EuroS\&P 2017)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  </li>
+
+  <li style="margin-bottom: 1ex;">
   </li>
 
 </ul>
