--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
   <li style="margin-bottom: 1ex;">
   <b>General Chair</b> of the 
   <a href="http://www.ieee-security.org/TC/EuroSP2017/">
-       2nd IEEE European Symposium on Security and Privacy (EuroS\&P 2017)</a>
+       2nd IEEE European Symposium on Security and Privacy (EuroS&P 2017)</a>
   </li>
 
   <li style="margin-bottom: 1ex;">
