--- a/service.html
+++ b/service.html
@@ -25,7 +25,7 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-  <b>General Chair</b> of the 
+  <b>General Chair</b> of 
   <a href="http://www.ieee-security.org/TC/EuroSP2017/">
        2nd IEEE European Symposium on Security and Privacy (EuroS&P 2017)</a>
   </li>
