--- a/service.html
+++ b/service.html
@@ -48,9 +48,9 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-  <a href="http://conf.researchr.org/home/POPL-2017">
+  <b><a href="http://conf.researchr.org/home/POPL-2017">
   44th ACM SIGPLAN Symposium on
-    Principles of Programming Languages (POPL 2017)</a>
+    Principles of Programming Languages (POPL 2017)</a></b>
   </li>
 
   <li style="margin-bottom: 1ex;">
