--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
-  Main organizer of the <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">Joint EasyCrypt-F$^\star$-CryptoVerif School 2014 in Paris</a> (over 80 participants)
+  Main organizer of the <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">Joint EasyCrypt-F*-CryptoVerif School 2014 in Paris</a> (over 80 participants)
   </li>
 
   <li style="margin-bottom: 1ex;">
