--- a/service.html
+++ b/service.html
@@ -53,12 +53,29 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
+  <a href="http://www.etaps.org/index.php/2017/post">
+  6th International Conference on Principles of Security and Trust (POST 2017)</a>
   </li>
 
   <li style="margin-bottom: 1ex;">
+  <a href="http://csf2016.tecnico.ulisboa.pt/">
+  29th IEEE Computer Security Foundations Symposium (CSF 2016)</a>
   </li>
 
   <li style="margin-bottom: 1ex;">
+  <a href="http://itp2016.inria.fr/">
+  7th International Conference on Interactive Theorem Proving (ITP 2016)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="https://people.csail.mit.edu/adamc/cpp16/">
+  4th ACM-SIGPLAN Conference on Certified Programs and Proofs (CPP 2016)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="http://acns2014.epfl.ch/">
+  12th International Conference on Applied Cryptography and
+   Network Security (ACNS 2014)</a>
   </li>
 
 </ul>
@@ -68,25 +85,55 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+  <a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">
+  Workshop on Type-Directed Programming (TyDe 2016)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="http://hatt2016.inria.fr/">
+  1st International Workshop on Hammers for Type Theories (HaTT 2016)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="http://software.imdea.org/~bkoepf/FCS-FCC14">
+  Joint Workshop on Foundations of Computer Security\\and
+   Formal and Computational Cryptography (FCS-FCC 2014)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="http://prosecco.gforge.inria.fr/personal/bblanche/fcs13/">
+  10th Workshop on Foundations of Computer Security (FCS 2013)</a>
   </li>
 
 </ul>
 
 <h3>Reviewer for journals</h3>
 
-<ul style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-  </li>
-
-</ul>
+      <a href="http://jacm.acm.org/">JACM</a> ($\times 1$),
+      <a href="http://www.iospress.nl/journal/journal-of-computer-security/">JCS</a> ($\times 4$),
+      <a href="http://toplas.acm.org/">TOPLAS</a> ($\times 3$),
+      <a href="http://journals.cambridge.org/action/displayJournal?jid=JFP">JFP</a> ($\times 2$),
+      <a href="http://www.springer.com/computer/theoretical+computer+science/journal/10990">HOSC</a> ($\times 1$),
+      <a href="http://ees.elsevier.com/jlamp/">JLAMP</a> ($\times 1$)
 
 <h3>External reviewer for conferences</h3>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">
-  </li>
+    <a href="http://www.ieee-security.org/TC/SP2016/">Oakland S\&P 2016</a> ($\times 1$),
+    <a href="http://researcher.ibm.com/researcher/view\_project.php?id=5237">PLAS 2014</a> ($\times 1$),
+    <a href="http://www.etaps.org/index.php/2014/post">POST 2014</a> ($\times 1$),
+    <a href="http://popl.mpi-sws.org/2014/">POPL 2014</a> ($\times 2$),
+    <a href="http://cpp2013.forge.nicta.com.au/">CPP 2013</a> ($\times 1$),
+    <a href="http://csf2013.seas.harvard.edu/">CSF 2013</a> ($\times 1$),
+    <a href="http://popl.mpi-sws.org/2013/">POPL 2013</a> ($\times 2$),
+    <a href="http://csf2012.seas.harvard.edu/">CSF 2012</a> ($\times 1$),
+    <a href="http://web.cs.wpi.edu/~guttman/post12/">POST 2012</a> ($\times 1$),
+    <a href="http://www.icfpconference.org/icfp2011/">ICFP 2011</a> ($\times 1$),
+    <a href="http://www.informatik.uni-trier.de/~ley/db/conf/csfw/csf2009.html">CSF 2009</a> ($\times 4$),
+    <a href="http://isc08.twisc.org/">ISC 2008</a> ($\times 1$),
+    <a href="http://petsymposium.org/2008/">PETS 2008</a> ($\times 2$),
+    <a href="http://www.ru.is/kennarar/luca/ICALP08/icalp08/icalp08/">ICALP 2008</a> ($\times 1$)
 
 </ul>
 
