--- a/service.html
+++ b/service.html
@@ -120,7 +120,7 @@
 
 <ul style="width:42em; text-align: left">
 
-    <a href="http://www.ieee-security.org/TC/SP2016/">Oakland S\&P 2016</a> (x1),
+    <a href="http://www.ieee-security.org/TC/SP2016/">Oakland S&amp;P 2016</a> (x1),
     <a href="http://researcher.ibm.com/researcher/view\_project.php?id=5237">PLAS 2014</a> (x1),
     <a href="http://www.etaps.org/index.php/2014/post">POST 2014</a> (x1),
     <a href="http://popl.mpi-sws.org/2014/">POPL 2014</a> (x2),
