--- a/index.html
+++ b/index.html
@@ -721,6 +721,7 @@ Property-Based Testing</a></li>
       (January 2013)
 -->
   </li>
+  <li><a href="service.html">My community service</a></li>
   <li><a href="https://github.com/catalin-hritcu">My Github account</a></li>
   <li><a href="https://hritcu.wordpress.com">My old blog (Smiling)</a></li>
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
