--- a/index.html
+++ b/index.html
@@ -714,16 +714,16 @@ Property-Based Testing</a></li>
 
 <h2 id="misc">Misc</h2>
 <ul>
-  <li><a href="CatalinHritcuCV.pdf">My curriculum vitae</a>
+  <li><a href="CatalinHritcuCV.pdf">Curriculum vitae</a>
 <!--, 
       <a href="CatalinHritcuResearch.pdf">research statement</a>, and
       <a href="CatalinHritcuTeaching.pdf">teaching statement</a>
       (January 2013)
 -->
   </li>
-  <li><a href="service.html">My community service</a></li>
-  <li><a href="https://github.com/catalin-hritcu">My Github account</a></li>
-  <li><a href="https://hritcu.wordpress.com">My old blog (Smiling)</a></li>
+  <li><a href="service.html">Community service</a></li>
+  <li><a href="https://github.com/catalin-hritcu">Github account</a></li>
+  <li><a href="https://hritcu.wordpress.com">Old blog (Smiling)</a></li>
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
     <li>Spelling my name in LaTeX: <code>C\u{a}t\u{a}lin Hri\c{t}cu</code></li>
     <li>Spelling my name in HTML: <code>C&amp;#259;t&amp;#259;lin Hri&amp;#355;cu</code></li>
