--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: F* course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a><br/> summer school, Bucharest, September 2016
   </li>
 
-  <li style="margin-bottom: 1ex;">Participating in <a href="https://project-everest.github.io/">Project Everest</a>; a collaboration between Microsoft Research, Inria and the community at large to build and deploy a verified HTTPS stack.</li>
+  <li style="margin-bottom: 1ex;">Participating in <a href="https://project-everest.github.io/">Project Everest</a>; a collaboration between Microsoft Research, Inria<br/> and the community at large to build and deploy a verified HTTPS stack.</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
 
