--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Research Cambridge</a>.</p>
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, Paris, December 2016 - February 2017
+  <li style="margin-bottom: 1ex;"><b>Upcoming</b>: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a> course at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - February 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Upcoming</b>: Visiting researcher at <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a>, October -- November 2016
