--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;">Participating in <a href="https://project-everest.github.io/">Project Everest</a>; a collaboration between Microsoft Research, Inria<br/> and the community at large to build and deploy a verified HTTPS stack.</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li> -->
 
-  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, January 2016
-  </li>
+  <!-- <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, January 2016 -->
+  <!-- </li> -->
   <!-- <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015 -->
   <!-- </li> -->
   <!-- <li style="margin-bottom: 1ex;">Visiting <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a> and <a href="https://www.cs.washington.edu/research/plse/people">University of Washington</a>, 10 - 28 August 2015 -->
