--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,8 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
+
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
           Language Based Verification Tools for Functional Programs</a>:
