--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ Property-Based Testing</a></li>
 
 <h2 id="tools">Software Tools</h2>
 
-<p>Here are my current software projects. For a complete list of past software please look <a href="software.html">here</a>.</p>
+<p>Here are my current software projects. For a complete list of software please look <a href="software.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
