--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@ MPRI website</a>.</p>
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;">
+    Danel Ahman,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Guido Martínez,
+    Gordon Plotkin,
+    Jonathan Protzenko,
+    Aseem Rastogi, and
+    Nikhil Swamy.
+    <b>Dijkstra Monads for Free</b>
+    Draft of July 2016.
+  </li>
+
   <li style="margin-bottom: 1ex;">
     Leonidas Lampropoulos,
     Diane Gallois-Wong,
