--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ MPRI website</a>.</p>
     Jonathan Protzenko,
     Aseem Rastogi, and
     Nikhil Swamy.
-    <b>Dijkstra Monads for Free</b>
+    <b>Dijkstra Monads for Free</b>.
     Draft of July 2016.
   </li>
 
