--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@ MPRI website</a>.</p>
 to a Tagged Architecture</a> 
 
     <ul style="font-size: small">
+      <li>Secure compilation mini-workshop in Paris (2016-08-17)</li>
       <li>ERC interview (2016-05-31)</li>
       <li>Prosecco Seminar (2016-03-02)</li>
       <li>MPI-SWS (2016-02-22)</li>
