--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ MPRI website</a>.</p>
     Jonathan Protzenko,
     Aseem Rastogi, and
     Nikhil Swamy.
-    <b>Dijkstra Monads for Free</b>.
+    <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
     Draft of July 2016.
   </li>
 
