--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><i>SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</i>, August 2016</li>
+  <li style="margin-bottom: 1ex;"><b>Fresh:</b> Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><i>SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</i>, August 2016</li>
 
   <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li>
 
