--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ Research Cambridge</a>.</p>
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
-    Theorem Proving, ITP 2016</a> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: 7 March 2016</li> -->
-  <li>Conference: 22-27 August 2016, Nancy, France</li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive -->
+  <!--   Theorem Proving, ITP 2016</a> (PC member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: 7 March 2016</li> -\-> -->
+  <!-- <li>Conference: 22-27 August 2016, Nancy, France</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
 <!-- http://conf.researchr.org/track/icfp-2016/tyde-2016-papers -->
   <li style="margin-bottom: 1ex;"><a href="https://tyde2016.github.io">Type-Driven Programming, TyDe 2016</a> (PC member)
