--- a/students.html
+++ b/students.html
@@ -30,14 +30,13 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/dianegalloiswong">Diane Gallois-Wong</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Luck: a Language for Effective, Dependable
-Property-Based Testing</a></li>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/alejandroag">Alejandro Aguirre</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
