--- a/talks.html
+++ b/talks.html
@@ -24,28 +24,15 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
-
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
-          Language Based Verification Tools for Functional Programs</a>:
-          <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
-      </li>
-
-      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
-      </li>
-    </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
 to a Tagged Architecture</a> 
 
     <ul style="font-size: small">
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a> (2016-09-02)</li>
-      <li>Secure compilation mini-workshop in Paris <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
-      <li>ERC interview <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
-      <li>Prosecco Seminar <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
-      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a> <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
+      <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
+      <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
+      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a>: <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
     </ul>
   </li>
 
@@ -58,6 +45,19 @@ to a Tagged Architecture</a>
           Nokia's Bell Labs<br/>-- Inria common lab:
           <a href="talks/Alcatel-Lucent.pdf">slides</a>
           (2015-12-15)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
+          Language Based Verification Tools for Functional Programs</a>:
+          <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
+      </li>
+
+      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
+      </li>
     </ul>
   </li>
 
