--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
-to a Tagged Architecture</a> 
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> <em>Efficient Formally Secure Compilers
+to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a> (2016-09-02)</li>
@@ -549,9 +549,9 @@ to a Tagged Architecture</a>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">More Secure Software Systems by
+  <li style="margin-bottom: 1ex;"><em>More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
-    Compilation, and Dynamic Monitoring</a> 
+    Compilation, and Dynamic Monitoring<em></a> 
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
