--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ to a Tagged Architecture</em></a>
 
   <li style="margin-bottom: 1ex;"><em>More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
-    Compilation, and Dynamic Monitoring<em></a> 
+    Compilation, and Dynamic Monitoring</em></a> 
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
