--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ to a Tagged Architecture</em></a>
       <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
       <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
-      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a>: <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
+      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
     </ul>
   </li>
 
