--- a/talks.html
+++ b/talks.html
@@ -24,15 +24,15 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
-to a Tagged Architecture</a> 
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> <em>Efficient Formally Secure Compilers
+to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a> (2016-09-02)</li>
       <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
       <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
-      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a>: <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
+      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
     </ul>
   </li>
 
@@ -49,9 +49,9 @@ to a Tagged Architecture</a>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">More Secure Software Systems by
+  <li style="margin-bottom: 1ex;"><em>More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
-    Compilation, and Dynamic Monitoring</a> 
+    Compilation, and Dynamic Monitoring</em></a> 
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
