--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ to a Tagged Architecture</em></a>
       Karthik Bhargavan, Cédric Fournet, and others)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Luck: A Domain Specific Language For Property-Based Generators</a>
+    <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
     (with Leonidas Lampropoulos, Li-yao Xia, Benjamin C. Pierce,
      John Hughes, and Zoe Paraskevopoulou)</li>
 
