--- a/index.html
+++ b/index.html
@@ -707,9 +707,21 @@ to a Tagged Architecture</em></a>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     <a href="https://www.fstar-lang.org">F*: From Program Verification System
-      to Proof Assistant</a> (with Nikhil Swamy, Chantal
-      Keller, Aseem Rastogi, Antoine Delignat-Lavaud, Simon Forest,
-      Karthik Bhargavan, Cédric Fournet, and others)</li>
+      to Proof Assistant</a> (with Nikhil Swamy,
+Alejandro Aguirre,
+Danel Ahman,
+Benjamin Beurdouche,
+Karthikeyan Bhargavan,
+Antoine Delignat-Lavaud,
+Cédric Fournet,
+Chantal Keller,
+Guido Martínez,
+Gordon Plotkin,
+Jonathan Protzenko,
+Aseem Rastogi,
+Peng (Perry) Wang,
+Santiago Zanella-Béguelin,
+Jean-Karim Zinzindohoue</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
