--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ Jonathan Protzenko,
 Aseem Rastogi,
 Peng (Perry) Wang,
 Santiago Zanella-Béguelin,
-Jean-Karim Zinzindohoue</li>
+Jean-Karim Zinzindohoue)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
