--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ Jean-Karim Zinzindohoue)</li>
   <li style="margin-bottom: 1ex;">
     <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
     (with Leonidas Lampropoulos, Diane Gallois-Wong, 
-     John Hughes, Zoe Paraskevopoulou, Benjamin C. Pierce, and Li-yao Xia)</li>
+     John Hughes, Benjamin C. Pierce, and Li-yao Xia)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
