--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b>Fresh:</b> Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><i>SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</i>, August 2016
     <ul>
       <li style="margin-top: 1ex"><b>Open positions on ERC SECOMP:</b>
-      Looking for excellent, highly motivated students and young
-      researchers for Research Internship, PhD Student, PostDoc,
-      Starting Researcher, and Research Engineer positions at Inria Paris</li>
+      Looking for outstanding students and young researchers for
+      Research Internship, PhD Student, PostDoc, Starting Researcher,
+      and Research Engineer positions at Inria Paris</li>
     </ul>
   </li>
 
