--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Research Cambridge</a>.</p>
       <li style="margin-top: 1ex"><b>Open positions on ERC SECOMP:</b>
       Looking for outstanding students and young researchers for
       Research Internship, PhD Student, PostDoc, Starting Researcher,
-      and Research Engineer positions at Inria Paris</li>
+      <br/>and Research Engineer positions at Inria Paris</li>
     </ul>
   </li>
 
