--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp.pdf">Efficient Formally Secure Compilers to a Tagged Architecture</a><br/>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp.pdf">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a><br/>
   (<a href="http://arxiv.org/abs/1602.04503">draft paper #0</a>,
    <a href="http://arxiv.org/abs/1510.00697">draft paper #1</a>,
    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">paper #2</a>,
@@ -377,7 +377,8 @@ MPRI website</a>.</p>
           Beyond Good and Evil: Formalizing the Security Guarantees
                                 of Compartmentalizing Compilation</a></b>.
           <a href="http://csf2016.tecnico.ulisboa.pt/">In 29th IEEE Symposium on Computer Security Foundations (CSF)</a>.
-          To appear. arXiv:1602.04503. Author Preprint of May 6 2016.
+          pages 45-60. IEEE Computer Society Press, July 2016.
+          (arXiv:1602.04503)
   <ul style="font-size: small">
     <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
   </ul>
