--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Fresh:</b> Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><i><b>SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</b></i>, August 2016
+  <li style="margin-bottom: 1ex;"><b>Fresh:</b> Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><i><b><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></b></i>, August 2016
     <ul>
-      <li style="margin-top: 1ex"><b>Open positions on ERC SECOMP:</b>
+      <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions on ERC SECOMP</a>:</b>
       Looking for outstanding students and young researchers for
       Research Internship, PhD Student, PostDoc, Starting Researcher,
       <br/>and Research Engineer positions at Inria Paris</li>
@@ -229,12 +229,7 @@ could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp.pdf">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a><br/>
-  (<a href="http://arxiv.org/abs/1602.04503">draft paper #0</a>,
-   <a href="http://arxiv.org/abs/1510.00697">draft paper #1</a>,
-   <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">paper #2</a>,
-   <a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">paper #3</a>,
-   <a href="https://github.com/micro-policies">code</a>)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
 (<a href="https://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
