--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></li>
+  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/">ERC SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
 (<a href="https://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
