--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ could contribute:
 (<a href="https://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
- <a href="https://www.fstar-lang.org/#papers">paper</a>)
+ <a href="https://www.fstar-lang.org/#papers">papers</a>)
    <!-- <ul><li><b>PhD position available</b> (funded by -->
    <!--         <a href="http://research.microsoft.com/en-us/collaboration/global/apply-europe.aspx">Microsoft Research PhD Scholarship Programme</a>)</li> -->
   </li>
